@@ -5,6 +5,7 @@ import com.vadim.springtask.exception.DuplicateRecordException;
 import com.vadim.springtask.exception.NotFoundException;
 import com.vadim.springtask.model.dto.mapper.TagMapper;
 import com.vadim.springtask.model.dto.request.TagRequestDto;
+import com.vadim.springtask.model.dto.response.PageResponseDto;
 import com.vadim.springtask.model.dto.response.TagResponseDto;
 import com.vadim.springtask.model.entity.Tag;
 import com.vadim.springtask.service.TagService;
@@ -14,7 +15,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static com.vadim.springtask.util.constants.TagConstants.TAG_ALREADY_EXISTS_WITH_NAME;
 import static com.vadim.springtask.util.constants.TagConstants.TAG_NOT_FOUND_BY_ID;
@@ -37,10 +37,16 @@ public class TagServiceImpl implements TagService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<TagResponseDto> getAll() {
-        return dao.findAll().stream()
+    public PageResponseDto<TagResponseDto> getAll(Integer page, Integer pageSize) {
+        List<TagResponseDto> tagResponseDtos = dao.findAll(page, pageSize).stream()
                 .map(mapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
+        return PageResponseDto.<TagResponseDto>builder()
+                .size(pageSize)
+                .pageNumber(page)
+                .elementsAmount(tagResponseDtos.size())
+                .content(tagResponseDtos)
+                .build();
     }
 
     @Override
